mocks/with-proxy-interceptor-standalone/proxy-interceptor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-interceptor
  labels:
    app: proxy-interceptor
spec:
  selector:
    matchLabels:
      app: proxy-interceptor
  template:
    metadata:
      labels:
        app: proxy-interceptor
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: proxy-traffic-interceptor
          image: "quay.io/zgrinber/traffic-interceptor-quarkus:6"
          ports:
            - name: proxy
              containerPort: 10000
