mocks/with-proxy-interceptor-standalone/proxy-interceptor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-interceptor
spec:
  ports:
  - name: http
    port: 10000
    protocol: TCP
    targetPort: 10000
  selector:
    app: proxy-interceptor
