mocks/with-proxy-interceptor-standalone/virtual-service.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ingress-gateway-to-employees
  labels:
    policyResource: "true"
spec:
  hosts:
#  - "*.test-sa.svc.cluster.local"
  - employees-api.test-sa.svc.cluster.local
  - istio-ingressgateway.istio.system.svc.cluster.local
  - istio-ingressgateway-istio-system.apps.exate-us-west.fsi.rhecoeng.com

  gateways:
    - demo-ingress
    - mesh
  http:
  - name: route-from-proxy-interceptor-itself
    match:
    - sourceLabels:
        app: "proxy-interceptor"
    route:
        - destination:
            host: employees-api.test-sa.svc.cluster.local
            port:
              number: 9999
  - name: route-from-internal-clients
    match:
    - sourceLabels:
        intercepted-by-proxy: "true"
    route:
      - destination:
          host: proxy-interceptor.test-sa.svc.cluster.local
          port:
            number: 10000
        headers:
          request:
            add:
              x-source-origin: pod-within-mesh
  - name: route-from-outside-mesh-via-ingress-gateway
    match:
    - uri:
        prefix: "/employees"
    rewrite:
      authority: employees-api:9999
    route:
      - destination:
          host: proxy-interceptor.test-sa.svc.cluster.local
          port:
            number: 10000
        headers:
          request:
            add:
              x-source-origin: ingress-gateway
